--- a/src/components/Wsp.astro
+++ b/src/components/Wsp.astro
@@ -214,11 +214,11 @@ throw new Error("Function not implemented.");
         headerTitle: "WhatsApp Chat",
         headerColor: "#25D366",
         buttonImage:
-          '<img src="/whatsapp.svg" />',
+          '<img src="/whatsapp.svg" alt="" />',
         size: "72px",
         position: "right",
         avatar: '<div class="relative">' +
-                  '<img class="w-10 h-10 rounded-full" src="/profile-picture-4.jpg" />' +
+                  '<img class="w-10 h-10 rounded-full" src="/profile-picture-4.jpg" alt=""/>' +
                   '<span class="top-1 left-3 absolute  w-3.5 h-3.5 bg-green-400 border-2 border-white dark:border-gray-800 rounded-full"></span>' +
                 '</div>',
         avatarName: "PSY ELECTRONICS",
