--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,14 +57,14 @@ const { title, description } = Astro.props
 		--color-secondary: #ddd;
 
 		--background-color: var(--color-secondary);
-		--background-image: var(--background-color) url("/concrete.png") repeat;
+		--background-image: var(--background-color) url("/concrete.webp") repeat;
 	}
 
 	.dark {
 		--color-primary: #ddd;
 		--color-secondary: #333;
 
-		--background-image: var(--background-color) url("/concrete-dark.png") repeat;
+		--background-image: var(--background-color) url("/concrete-dark.webp") repeat;
 	}
 
 	html {
