--- a/src/components/SmokeBackground.astro
+++ b/src/components/SmokeBackground.astro
@@ -1,4 +1,4 @@
-<div id="smoke-bkg" class="fixed top-0 -z-10 h-full w-full"></div>
+<div id="smoke-bkg" class="fixed top-0 -z-10 h-full "></div>
 
 <script>
 	import * as THREE from "three"
