--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,11 +8,12 @@ import Footer from "@/sections/Footer.astro"
 
 
 import Nav from "@/sections/Nav.astro"
+import Elementor from "@/sections/Elementor.astro"
 ---
 
 <Layout description="About" title="Psy Electronics">
+	<Elementor/>
 	<Nav />
-
 	<Wsp />
 
 	<main>
