--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,16 @@ import Footer from "@/sections/Footer.astro"
 import Hero from "@/sections/Hero.astro"
 import Info from "@/sections/Info.astro"
 
+import Elementor from "@/sections/Elementor.astro"
+
 
 import Nav from "@/sections/Nav.astro"
 ---
 
 <Layout description="Home Psy-Electronics" title="Psy Electronics">
+	<Elementor/>
 	<Nav/>
-	<Hero />
+	
 	<Wsp/>
 	<main>
 		<Info />
